==> Jan0510/GRBL1.1_learning/2016050701_STM32F407/GRBL/stepper.c <==
#include "stepper.h"
#include "timer.h"
#define DT_SEGMENT (1.0/(ACCELERATION_TICKS_PER_SECOND*60.0)) // min/segment
#define REQ_MM_INCREMENT_SCALAR 1.25
#define RAMP_ACCEL 0
#define RAMP_CRUISE 1
#define RAMP_DECEL 2
#define MAX_AMASS_LEVEL 3
#define AMASS_LEVEL1 (F_TIMER/8000) // Over-drives ISR (x2). Defined as F_CPU/(Cutoff frequency in Hz)
#define AMASS_LEVEL2 (F_TIMER/4000) // Over-drives ISR (x4)
#define AMASS_LEVEL3 (F_TIMER/2000) // Over-drives ISR (x8)

void st_wake_up() //系统退出休眠状态
{
	// Enable stepper drivers.
	if (bit_istrue(settings.flags,BITFLAG_INVERT_ST_ENABLE)) 
	{ 
		GPIO_SetBits(GPIOC,(1<<STEPPERS_DISABLE_BIT));
	}
	else 
	{ 
		GPIO_ResetBits(GPIOC,(1<<STEPPERS_DISABLE_BIT)); 
	}

  if (sys.state & (STATE_CYCLE | STATE_HOMING)){
    // Initialize stepper output bits
    st.dir_outbits = dir_port_invert_mask; 
    st.step_outbits = step_port_invert_mask;
    
    // Initialize step pulse timing from settings. Here to ensure updating after re-writing.
    #ifdef STEP_PULSE_DELAY
      // Set total step pulse time after direction pin set. Ad hoc computation from oscilloscope.
      st.step_pulse_time = -(((settings.pulse_microseconds+STEP_PULSE_DELAY-2)*TICKS_PER_MICROSECOND) >> 3);
      // Set delay between direction pin write and step command.
      OCR0A = -(((settings.pulse_microseconds)*TICKS_PER_MICROSECOND) >> 3);
    #else // Normal operation
      // Set step pulse time. Ad hoc computation from oscilloscope. Uses two's complement.
      st.step_pulse_time = settings.pulse_microseconds-2;
    #endif

    // Enable Stepper Driver Interrupt
	  TIM_ClearITPendingBit(TIM3,TIM_IT_Update);   //清除定时器3的中断标志位
	  TIM_ITConfig(TIM3,TIM_IT_Update,ENABLE);     //使能定时器3的更新中断
    TIM_Cmd(TIM3,ENABLE);                        //开启定时器3，控制步进脉冲的频率
  }
}

void st_go_idle() 
{
	bool pin_state;
  // Disable Stepper Driver Interrupt. Allow Stepper Port Reset Interrupt to finish, if active.
	TIM_ClearITPendingBit(TIM3,TIM_IT_Update);     //清除定时器3的中断标志位
	TIM_ITConfig(TIM3,TIM_IT_Update,DISABLE);      //定时器3的更新中断去使能
  TIM_Cmd(TIM3,DISABLE);                         //关闭定时器3
  busy = false;
  
  // Set stepper driver idle state, disabled or enabled, depending on settings and circumstances.
  pin_state = false; // Keep enabled.
  if (((settings.stepper_idle_lock_time != 0xff) || sys_rt_exec_alarm) && sys.state != STATE_HOMING) {
    // Force stepper dwell to lock axes for a defined amount of time to ensure the axes come to a complete
    // stop and not drift from residual inertial forces at the end of the last movement.
    delay_ms(settings.stepper_idle_lock_time);
    pin_state = true; // Override. Disable steppers.
  }
  if (bit_istrue(settings.flags,BITFLAG_INVERT_ST_ENABLE)) { pin_state = !pin_state; } // Apply pin invert.
  if (pin_state) 
	{ 
		GPIO_SetBits(GPIOC,(1<<STEPPERS_DISABLE_BIT)); 
	}
	else 
	{ 
		GPIO_ResetBits(GPIOC,(1<<STEPPERS_DISABLE_BIT));
	}
}

void st_reset()
{
  // Initialize stepper driver idle state.
  st_go_idle();
  
  // Initialize stepper algorithm variables.
  memset(&prep, 0, sizeof(st_prep_t));
  memset(&st, 0, sizeof(stepper_t));
  st.exec_segment = NULL;
  pl_block = NULL;  // Planner block pointer used by segment buffer
  segment_buffer_tail = 0;
  segment_buffer_head = 0; // empty = tail
  segment_next_head = 1;
  busy = false;
  
  st_generate_step_dir_invert_masks();
      
  // Initialize step and direction port pins.
	if(step_port_invert_mask & (1<<X_STEP_BIT))
		GPIO_SetBits(GPIOA,(1<<X_STEP_BIT));
	else
		GPIO_ResetBits(GPIOA,(1<<X_STEP_BIT));
	if(step_port_invert_mask & (1<<Y_STEP_BIT))
		GPIO_SetBits(GPIOA,(1<<Y_STEP_BIT));
	else
		GPIO_ResetBits(GPIOA,(1<<Y_STEP_BIT));
	if(step_port_invert_mask & (1<<Z_STEP_BIT))
		GPIO_SetBits(GPIOA,(1<<Z_STEP_BIT));
	else
		GPIO_ResetBits(GPIOA,(1<<Z_STEP_BIT));
	
	if(dir_port_invert_mask & (1<<X_DIRECTION_BIT))
		GPIO_SetBits(GPIOC,(1<<X_DIRECTION_BIT));
	else
		GPIO_ResetBits(GPIOC,(1<<X_DIRECTION_BIT));
	if(dir_port_invert_mask & (1<<Y_DIRECTION_BIT))
		GPIO_SetBits(GPIOC,(1<<Y_DIRECTION_BIT));
	else
		GPIO_ResetBits(GPIOC,(1<<Y_DIRECTION_BIT));
	if(dir_port_invert_mask & (1<<Z_DIRECTION_BIT))
		GPIO_SetBits(GPIOC,(1<<Z_DIRECTION_BIT));
	else
		GPIO_ResetBits(GPIOC,(1<<Z_DIRECTION_BIT));
}

void stepper_init()
{
  // Configure step and direction interface pins
  GPIO_InitTypeDef  GPIO_InitStructure;
  RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOA, ENABLE);            //使能GPIOA时钟
	RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOC, ENABLE);
  
  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_4 | GPIO_Pin_2|GPIO_Pin_3;//step引脚初始化
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;                    //普通输出模式
  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;                   //推挽输出
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;//50MHz
  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
  GPIO_Init(GPIOA, &GPIO_InitStructure);//脉冲引脚与使能引脚初始化
	
  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_1|GPIO_Pin_2|GPIO_Pin_3|GPIO_Pin_0;//方向引脚和使能引脚初始化
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;//普通输出模式
  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;//推挽输出
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;//50MHz
  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
  GPIO_Init(GPIOC, &GPIO_InitStructure);//方向引脚初始化

  // Configure Timer 3: Stepper Driver Interrupt
	TIM3_Int_Init(500-1,1-1);
  
  TIM4_Int_Init(500-1,64-1);
  #ifdef STEP_PULSE_DELAY
	TIMSK0 |= (1<<OCIE0A); // Enable Timer0 Compare Match A interrupt
  #endif
}
